--- a/storyteller_lib/templates/languages/german/scene_correction.jinja2
+++ b/storyteller_lib/templates/languages/german/scene_correction.jinja2
@@ -10,7 +10,6 @@ KORREKTURANWEISUNG:
 SZENENKONTEXT:
 - Genre: {{ genre }}
 - Ton: {{ tone }}
-- Ursprüngliche Szenenanweisungen: {{ scene_instructions }}
 
 KORREKTURRICHTLINIEN:
 1. Wenden Sie NUR die spezifische Korrektur an, die in der Anweisung erwähnt wird
@@ -24,4 +23,11 @@ KORREKTURRICHTLINIEN:
 4. Fügen Sie keine neuen Handlungselemente oder Charakterentwicklungen hinzu, es sei denn, dies wird ausdrücklich durch die Korrektur verlangt
 5. Wahren Sie die Konsistenz mit dem etablierten Genre und Ton
 
-Schreiben Sie die korrigierte Szene unten, wobei NUR die angeforderte Änderung angewendet wird:
+STILKORREKTUR-SPEZIFIKA:
+- Bei der Behebung von Wortwiederholungen verwenden Sie abwechslungsreiches Vokabular bei gleichbleibender Bedeutung
+- Ersetzen Sie wiederholte Wörter durch passende Synonyme oder strukturieren Sie Sätze um
+- Vermeiden Sie die mehrfache Verwendung derselben beschreibenden Wörter (Farben, Adjektive) in kurzer Folge
+- Sorgen Sie für Abwechslung in Satzstrukturen und Handlungsbeschreibungen
+- Beheben Sie redundante Beschreibungen durch Zusammenfassung oder Entfernung unnötiger Wiederholungen
+
+Schreiben Sie die korrigierte Szene unten, wobei NUR die angeforderten Änderungen angewendet werden:
