--- a/storyteller_lib/templates/languages/german/synthesize_book_instructions.jinja2
+++ b/storyteller_lib/templates/languages/german/synthesize_book_instructions.jinja2
@@ -10,6 +10,13 @@ AUTORENSTIL-ANALYSE:
 {{ author_style_guidance }}
 {% endif %}
 
+STILANFORDERUNGEN:
+- WORTVIELFALT: Vermeide Wortwiederholungen innerhalb von Absätzen. Jedes beschreibende Wort (insbesondere Substantive, Adjektive, Verben) sollte nur einmal pro Absatz erscheinen.
+- WORTSCHATZREICHTUM: Verwende Synonyme und abwechslungsreiche Ausdrücke statt derselben Wörter zu wiederholen.
+- SATZVARIATION: Mische Satzlängen und -strukturen um Rhythmus zu erzeugen.
+- FRISCHE BESCHREIBUNGEN: Jede Erwähnung eines Objekts, Charakters oder Ortes sollte neue Informationen oder Perspektiven hinzufügen.
+- KEINE REDUNDANZ: Verwende niemals mehrere Wörter, die dasselbe bedeuten, zusammen (z.B. "dunkel schwarz", "nasser Regen", "verblasst blass").
+
 GENRE: {{ genre }}
 TON: {{ tone }}
 
